--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -122,6 +122,11 @@
             android:layout_height="wrap_content"
             android:entries="@array/kelas" />
 
+        <Spinner
+            android:id="@+id/spinnerJurusan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <TextView
             android:id="@+id/textViewOrgan"
             android:layout_width="wrap_content"
